--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- top navigation -->
     <div class="top">
         <div class="nav-container">
-            <h1>VideoLab</h1>
+            <h1>Video-Lab</h1>
             <input type="text" placeholder="Search" name="query" class="search">
             <button class="btn">Login</button>
         </div>
